// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroCarousel stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    aria-label="Hero carousel with 3 slides"
    class="relative w-full h-[400px] md:h-[500px] lg:h-[600px] overflow-hidden"
    role="region"
    tabindex="0"
  >
    <div
      aria-roledescription="carousel"
      class="relative w-full h-full [&_[data-slot=carousel-content]]:h-full [&_[data-slot=carousel-item]]:h-full"
      data-slot="carousel"
      role="region"
    >
      <div
        class="overflow-hidden"
        data-slot="carousel-content"
      >
        <div
          class="flex -ml-4 h-full"
          style="transform: translate3d(0px,0px,0px);"
        >
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 1"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      Welcome to Our Store
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Discover amazing products
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/all"
                      >
                        Shop Now
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 2"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      New Collection
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Latest fashion trends
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/new"
                      >
                        Explore
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 3"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      Special Offers
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Limited time deals
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/sale"
                      >
                        Shop Deals
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Slide navigation"
      class="absolute bottom-6 left-1/2 -translate-x-1/2 z-30 flex gap-2"
      role="tablist"
    >
      <button
        aria-label="Go to slide 1 of 3"
        aria-selected="true"
        class="transition-all duration-300 rounded-full focus:outline-none focus:ring-2 focus:ring-white/50 w-8 h-2 bg-white"
        role="tab"
        tabindex="0"
      />
      <button
        aria-label="Go to slide 2 of 3"
        aria-selected="false"
        class="transition-all duration-300 rounded-full focus:outline-none focus:ring-2 focus:ring-white/50 w-2 h-2 bg-white/50 hover:bg-white/75"
        role="tab"
        tabindex="-1"
      />
      <button
        aria-label="Go to slide 3 of 3"
        aria-selected="false"
        class="transition-all duration-300 rounded-full focus:outline-none focus:ring-2 focus:ring-white/50 w-2 h-2 bg-white/50 hover:bg-white/75"
        role="tab"
        tabindex="-1"
      />
    </div>
    <div
      class="absolute bottom-6 right-6 z-30 flex gap-2"
    >
      <button
        aria-label="Previous slide (1 of 3)"
        class="p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm rounded-lg transition-all focus:outline-none focus:ring-2 focus:ring-white/50"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left w-6 h-6 text-primary-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Next slide (1 of 3)"
        class="p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm rounded-lg transition-all focus:outline-none focus:ring-2 focus:ring-white/50"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right w-6 h-6 text-primary-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
      Slide 
      1
       of 
      3
      : 
      Welcome to Our Store
    </div>
  </div>
</div>
`;

exports[`HeroCarousel stories snapshot > WithoutAutoPlay story renders and matches snapshot 1`] = `
<div>
  <div
    aria-label="Hero carousel with 3 slides"
    class="relative w-full h-[400px] md:h-[500px] lg:h-[600px] overflow-hidden"
    role="region"
    tabindex="0"
  >
    <div
      aria-roledescription="carousel"
      class="relative w-full h-full [&_[data-slot=carousel-content]]:h-full [&_[data-slot=carousel-item]]:h-full"
      data-slot="carousel"
      role="region"
    >
      <div
        class="overflow-hidden"
        data-slot="carousel-content"
      >
        <div
          class="flex -ml-4 h-full"
          style="transform: translate3d(0px,0px,0px);"
        >
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 1"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      Welcome to Our Store
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Discover amazing products
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/all"
                      >
                        Shop Now
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 2"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      New Collection
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Latest fashion trends
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/new"
                      >
                        Explore
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 3"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      Special Offers
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Limited time deals
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/sale"
                      >
                        Shop Deals
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Slide navigation"
      class="absolute bottom-6 left-1/2 -translate-x-1/2 z-30 flex gap-2"
      role="tablist"
    >
      <button
        aria-label="Go to slide 1 of 3"
        aria-selected="true"
        class="transition-all duration-300 rounded-full focus:outline-none focus:ring-2 focus:ring-white/50 w-8 h-2 bg-white"
        role="tab"
        tabindex="0"
      />
      <button
        aria-label="Go to slide 2 of 3"
        aria-selected="false"
        class="transition-all duration-300 rounded-full focus:outline-none focus:ring-2 focus:ring-white/50 w-2 h-2 bg-white/50 hover:bg-white/75"
        role="tab"
        tabindex="-1"
      />
      <button
        aria-label="Go to slide 3 of 3"
        aria-selected="false"
        class="transition-all duration-300 rounded-full focus:outline-none focus:ring-2 focus:ring-white/50 w-2 h-2 bg-white/50 hover:bg-white/75"
        role="tab"
        tabindex="-1"
      />
    </div>
    <div
      class="absolute bottom-6 right-6 z-30 flex gap-2"
    >
      <button
        aria-label="Previous slide (1 of 3)"
        class="p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm rounded-lg transition-all focus:outline-none focus:ring-2 focus:ring-white/50"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left w-6 h-6 text-primary-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Next slide (1 of 3)"
        class="p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm rounded-lg transition-all focus:outline-none focus:ring-2 focus:ring-white/50"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right w-6 h-6 text-primary-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
      Slide 
      1
       of 
      3
      : 
      Welcome to Our Store
    </div>
  </div>
</div>
`;

exports[`HeroCarousel stories snapshot > WithoutDots story renders and matches snapshot 1`] = `
<div>
  <div
    aria-label="Hero carousel with 3 slides"
    class="relative w-full h-[400px] md:h-[500px] lg:h-[600px] overflow-hidden"
    role="region"
    tabindex="0"
  >
    <div
      aria-roledescription="carousel"
      class="relative w-full h-full [&_[data-slot=carousel-content]]:h-full [&_[data-slot=carousel-item]]:h-full"
      data-slot="carousel"
      role="region"
    >
      <div
        class="overflow-hidden"
        data-slot="carousel-content"
      >
        <div
          class="flex -ml-4 h-full"
          style="transform: translate3d(0px,0px,0px);"
        >
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 1"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      Welcome to Our Store
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Discover amazing products
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/all"
                      >
                        Shop Now
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 2"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      New Collection
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Latest fashion trends
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/new"
                      >
                        Explore
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 3"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      Special Offers
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Limited time deals
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/sale"
                      >
                        Shop Deals
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="absolute bottom-6 right-6 z-30 flex gap-2"
    >
      <button
        aria-label="Previous slide (1 of 3)"
        class="p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm rounded-lg transition-all focus:outline-none focus:ring-2 focus:ring-white/50"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left w-6 h-6 text-primary-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Next slide (1 of 3)"
        class="p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm rounded-lg transition-all focus:outline-none focus:ring-2 focus:ring-white/50"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right w-6 h-6 text-primary-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
      Slide 
      1
       of 
      3
      : 
      Welcome to Our Store
    </div>
  </div>
</div>
`;

exports[`HeroCarousel stories snapshot > WithoutNavigation story renders and matches snapshot 1`] = `
<div>
  <div
    aria-label="Hero carousel with 3 slides"
    class="relative w-full h-[400px] md:h-[500px] lg:h-[600px] overflow-hidden"
    role="region"
    tabindex="0"
  >
    <div
      aria-roledescription="carousel"
      class="relative w-full h-full [&_[data-slot=carousel-content]]:h-full [&_[data-slot=carousel-item]]:h-full"
      data-slot="carousel"
      role="region"
    >
      <div
        class="overflow-hidden"
        data-slot="carousel-content"
      >
        <div
          class="flex -ml-4 h-full"
          style="transform: translate3d(0px,0px,0px);"
        >
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 1"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      Welcome to Our Store
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Discover amazing products
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/all"
                      >
                        Shop Now
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 2"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      New Collection
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Latest fashion trends
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/new"
                      >
                        Explore
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 3"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
              <div
                class="absolute inset-0"
                style="background: linear-gradient(to top, color-mix(in oklch, var(--brand-black) 30%, transparent) 0%, transparent 100%), linear-gradient(to right, color-mix(in oklch, var(--brand-black) 60%, transparent) 0%, color-mix(in oklch, var(--brand-black) 30%, transparent) 50%, transparent 100%);"
              />
              <div
                class="relative h-full flex items-center z-20 overflow-hidden"
              >
                <div
                  class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full"
                >
                  <div
                    class="max-w-xl"
                  >
                    <h1
                      class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary-foreground mb-4 tracking-tight"
                    >
                      Special Offers
                    </h1>
                    <p
                      class="text-base md:text-lg text-white/90 mb-8 font-normal"
                    >
                      Limited time deals
                    </p>
                    <div>
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-base"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/sale"
                      >
                        Shop Deals
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Slide navigation"
      class="absolute bottom-6 left-1/2 -translate-x-1/2 z-30 flex gap-2"
      role="tablist"
    >
      <button
        aria-label="Go to slide 1 of 3"
        aria-selected="true"
        class="transition-all duration-300 rounded-full focus:outline-none focus:ring-2 focus:ring-white/50 w-8 h-2 bg-white"
        role="tab"
        tabindex="0"
      />
      <button
        aria-label="Go to slide 2 of 3"
        aria-selected="false"
        class="transition-all duration-300 rounded-full focus:outline-none focus:ring-2 focus:ring-white/50 w-2 h-2 bg-white/50 hover:bg-white/75"
        role="tab"
        tabindex="-1"
      />
      <button
        aria-label="Go to slide 3 of 3"
        aria-selected="false"
        class="transition-all duration-300 rounded-full focus:outline-none focus:ring-2 focus:ring-white/50 w-2 h-2 bg-white/50 hover:bg-white/75"
        role="tab"
        tabindex="-1"
      />
    </div>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
      Slide 
      1
       of 
      3
      : 
      Welcome to Our Store
    </div>
  </div>
</div>
`;
